# n-nash

./: .gitignore  LICENSE  NASH-RESEARCH-WORKFLOWS.md  README.md
nash-analyze/: SKILL.md
nash-cli/: SKILL.md  pyproject.toml
nash-cli/scripts/nash_cli/: main.py  nash.bat  nash.sh
nash-cli/scripts/nash_cli/commands/: __init__.py  config_cmd.py  env_cmd.py  run.py  sweep.py  validate.py  viz.py
nash-cli/src/: contracts.py  error_codes.py  error_handler.py  logger_config.py  statistical_validator.py  visualization.py
nash-cli/src/environments/: __init__.py  auction_common_value.py  base.py  common_pool_resource.py  hawk_dove.py  public_goods.py  repeated_prisoners_dilemma.py  spence_signaling.py  two_sided_matching.py  vickrey_auction.py
nash-cli/src/services/: __init__.py
nash-cli/src/validators/: __init__.py  convergence_detector.py  nobel_validator.py
nash-cli/tests/: test_bugfixes.py  test_cli.py  test_common_pool.py  test_common_value.py  test_config.py  test_errors.py  test_hawk_dove.py  test_integration.py  test_matching.py  test_public_goods.py  test_registry.py  test_repeated_pd.py  test_spence.py  test_statistical.py  test_sweep.py  test_validate.py  test_vickrey.py  test_vickrey_analytical.py  test_viz.py
nash-env/: SKILL.md
nash-game-theory/: SKILL.md
nash-run/: SKILL.md
