[project]
name = "nash-cli"
version = "1.0.0"
description = "NASH CLI — Game theory simulation & Nobel equilibrium validation toolkit"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "../README.md"
keywords = [
    "game theory",
    "nash equilibrium",
    "agent-based modeling",
    "nobel prize",
    "simulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "mesa>=2.0.0",
    "pandas>=2.0.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = ""
Homepage = ""

[project.scripts]
nash = "scripts.nash_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
